--- a/styles.css
+++ b/styles.css
@@ -21,8 +21,11 @@ body {
   justify-content: center;
   align-items: center;
 }
+h1 {
+  color: blue;
+}
 #help-box {
-  border: 2px dotted black;
+  border: 4px solid white;
   height: 200px;
   width: 200px;
   text-align: center;
@@ -38,7 +41,7 @@ body {
   margin-top: 1em;
 }
 #myCanvas {
-  border:1px solid;
+
   position: absolute;
   margin-top: 9em;
   z-index: 2;
